ui components ready

--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -2,3 +2,8 @@
   font-family: "Nunito", sans-serif;
   src: local("Nunito"), url(../fonts/Nunito-Regular.ttf) format("truetype");
 }
+
+@font-face {
+  font-family: "Nunito", sans-serif;
+  src: local("Nunito"), url(../fonts/Nunito-Medium.ttf) format("truetype");
+}
