--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,10 +1,16 @@
+body,
+p,
 h1 {
   font-family: "Nunito", sans-serif;
+  font-weight: 400;
+}
+
+h1 {
   font-size: 40px;
   line-height: 40px;
 }
 
 body {
-  font-family: "Nunito", sans-serif;
-  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
 }
