--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -31,3 +31,21 @@ p {
 img {
   display: block;
 }
+
+// global classes
+.container {
+  margin: 0 16px;
+
+  @include md {
+    margin: 0 32px;
+  }
+
+  @include lg {
+    margin: 0 60px;
+  }
+
+  @include xlg {
+    max-width: 1170px;
+    margin: 0 auto;
+  }
+}
