--- a/src/components/homePage/Hero.module.scss
+++ b/src/components/homePage/Hero.module.scss
@@ -41,6 +41,10 @@
     margin-bottom: 36px;
   }
 
+  .signUpButton {
+    margin: 0 auto;
+  }
+
   @include md {
     padding: 89px 0 88px 0;
   }
