--- a/src/components/homePage/Hero.module.scss
+++ b/src/components/homePage/Hero.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   color: #fff;
   overflow: hidden;
-  background-image: url("../../assets/images/hero-bg.jpg");
+  background-image: url("../../assets/images/hero-bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
